[gd_scene load_steps=4 format=3 uid="uid://cp847ooo5fsde"]

[ext_resource type="Script" uid="uid://dumc2sh1k0nf3" path="res://scenes/enemy/enemy.gd" id="1_jf5t1"]
[ext_resource type="PackedScene" uid="uid://cm774d4hp3584" path="res://scenes/components/health_component.tscn" id="2_r8x88"]
[ext_resource type="PackedScene" uid="uid://d2ej5ejf1ft17" path="res://scenes/extra/health_bar.tscn" id="3_23iyx"]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jf5t1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_r8x88")]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HealthBar" parent="." instance=ExtResource("3_23iyx")]
offset_left = -69.0
offset_top = -21.0
offset_right = -69.0
offset_bottom = -21.0

[connection signal="on_damaged" from="HealthComponent" to="." method="_on_health_component_on_damaged"]
[connection signal="on_defeated" from="HealthComponent" to="." method="_on_health_component_on_defeated"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
